[feat/week06] 6.3.1 added GetChats
